# samosbor-gena

./: .gitmodules  Cargo.toml  README.md  docker-compose.yml
faces/: converter.sh
names/FIO_Men_Women/: baseMenFam.txt  baseMenName.txt  baseMenOtec.txt  baseWomenFam.txt  baseWomenName.txt  baseWomenOtec.txt
src/: cache.rs  faces.rs  generators.rs  main.rs  names.rs
