[package]
name = "samosbor-gena"
version = "0.1.0"
authors = ["Sergey Ukolov <zezic51@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.5", features = [ "macros", "mysql", "runtime-tokio-rustls" ] }
tokio = { version = "1.5.0", features = ["full"] }
log = "0.4"
rand = "0.7.3"
serenity = "0.10"

# [dependencies.async-std]
# version = "1.6.2"
# features = ["attributes"]